--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,6 @@
         "all"
     ],
     "remoteUser": "lilliu",
-    "workspaceFolder": "/home/lilliu/workspace"
+    "workspaceFolder": "/home/lilliu/workspace",
+    "postCreateCommand": "git clone https://github.com/SCaAg/mobile-env.git /home/lilliu/workspace"
 }
